--- a/README.Rmd
+++ b/README.Rmd
@@ -38,16 +38,17 @@ epf <- epf_personas %>%
 ```
 
 ## Declarar el diseño muestral
-Antes de comenzar a usar el paquete `calidad` es necesario declarar el diseño muestral de la encuesta que se está evaluando, para lo cual utilizamos el paquete `survey`. Se debe declarar el conglomerado de varianza, el estrato de varianza y el factor de expansión. Declaramos el diseño para las dos encuestas (EPF y ENE)
+Antes de comenzar a usar el paquete `calidad` es necesario declarar el diseño muestral de la encuesta que se está evaluando, para lo cual utilizamos el paquete `survey`. Se debe declarar el conglomerado de varianza, el estrato de varianza y el factor de expansión. Declaramos el diseño para las dos encuestas (EPF y ENE). Adicionalmente, puede ser útil declarar una opción para los estratos que solo tienen un conglomerado. 
 
 ```{r}
-options(survey.lonely.psu = "certainty")
-
 # Declarar el diseño muestral para la ENE
 dc_ene <- svydesign(ids = ~conglomerado , strata = ~estrato_unico, data = ene, weights = ~fact_cal)
 
 # Declarar el diseño muestral para la EPF
 dc_epf <- svydesign(ids = ~varunit, strata = ~varstrat, data = epf, weights = ~fe)
+
+options(survey.lonely.psu = "certainty")
+
 
 ```
 
@@ -57,13 +58,13 @@ dc_epf <- svydesign(ids = ~varunit, strata = ~varstrat, data = epf, weights = ~f
 
 Para evaluar la calidad de una estimación, la [metodología del INE](https://www.ine.cl/docs/default-source/documentos-de-trabajo/20200318-lineamientos-medidas-de-precisi%C3%B3n.pdf?sfvrsn=f1ab2dbe_4) establece criterios diferenciados para estimaciones de proporción (o razón), por un lado, y estimaciones de media y total, por otro. En el caso de estimaciones de proporción se requiere contar con el tamaño muestral, los grados de libertad y el error estándar. Las otras estimaciones requieren el tamaño muestral, los grados de libertad y el coeficiente de variación. 
 
-El paquete incluye funciones diferenciadas para crear los insumos para estimaciones de **media, proporción y total**. A continuación se muestra cómo se utilizan las funciones de proporción y total.
+El paquete incluye funciones diferenciadas para crear los insumos para estimaciones de **media, proporción, totales y mediana**. A continuación se muestra cómo se utilizan las funciones de proporción y total.
 
 
 
 ```{r}
-insumos_prop <- crear_insumos_prop(var = desocupado, dominios = sexo, subpop = fdt, disenio =  dc_ene)
-insumos_total <-  crear_insumos_tot(var = desocupado, dominios = sexo, subpop = fdt, disenio =  dc_ene)
+insumos_prop <- create_ratio(var = desocupado, dominios = sexo, subpop = fdt, disenio =  dc_ene)
+insumos_total <-  create_tot(var = desocupado, dominios = sexo, subpop = fdt, disenio =  dc_ene)
 
 ```
 
@@ -84,7 +85,7 @@ insumos_total
 Para obtener más desagregaciones, podemos usar el símbolo "+" de la siguiente manera:
 
 ```{r}
-desagregar <- crear_insumos_prop(var = desocupado, dominios = sexo+region, subpop = fdt, disenio =  dc_ene)
+desagregar <- create_ratio(var = desocupado, dominios = sexo+region, subpop = fdt, disenio =  dc_ene)
 
 ```
 
@@ -92,17 +93,17 @@ desagregar <- crear_insumos_prop(var = desocupado, dominios = sexo+region, subpo
 
 ### Encuesta de Presupuestos Familiares (parte 2)
 
-En ciertas ocasiones puede ser de interés evaluar la calidad de una suma. Por ejemplo, la suma de todos los ingresos de la EPF a nivel de zona geográfica (Gran Santiago y resto de capitales regionales). Para ello, existe la función `crear_insumos_tot_con`. Esta función recibe una variable continua como horas, gasto o ingreso y genera totales al nivel solicitado. La terminación "con" de la función hace alusión a que se está usando una variable continua.   
+En ciertas ocasiones puede ser de interés evaluar la calidad de una suma. Por ejemplo, la suma de todos los ingresos de la EPF a nivel de zona geográfica (Gran Santiago y resto de capitales regionales). Para ello, existe la función `create_tot_con`. Esta función recibe una variable continua como horas, gasto o ingreso y genera totales al nivel solicitado. La terminación "con" de la función hace alusión a que se está usando una variable continua.   
 
 ```{r, eval=T, warning=FALSE}
-insumos_suma <-  crear_insumos_tot_con(var = gastot_hd, dominios = zona, disenio =  dc_epf)
+insumos_suma <-  create_tot_con(var = gastot_hd, dominios = zona, disenio =  dc_epf)
 
 ```
 
 Si queremos evaluar la estimación de una media, contamos con la función `crear_insumos_media`. En este caso, calcularemos la media de gasto de los hogares, según área geográfica. 
 
 ```{r}
-insumos_media <-  crear_insumos_media(var = gastot_hd, dominios = zona, disenio =  dc_epf)
+insumos_media <-  create_mean(var = gastot_hd, dominios = zona, disenio =  dc_epf)
 
 ```
 
@@ -111,12 +112,12 @@ Cabe mencionar que el uso por defecto es no desagregar, en cuyo caso las funcion
 
 ```{r}
 # Usando datos de la ENE
-insumos_prop_nacional <- crear_insumos_prop(desocupado, subpop = fdt, disenio = dc_ene)
-insumos_total_nacional <-  crear_insumos_tot(desocupado, subpop = fdt, disenio = dc_ene)
+insumos_prop_nacional <- create_ratio(desocupado, subpop = fdt, disenio = dc_ene)
+insumos_total_nacional <-  create_tot(desocupado, subpop = fdt, disenio = dc_ene)
 
 # Usando datos de la EPF
-insumos_suma_nacional <- crear_insumos_tot_con(gastot_hd, disenio = dc_epf)
-insumos_media_nacional <-  crear_insumos_media(gastot_hd, disenio = dc_epf)
+insumos_suma_nacional <- create_tot_con(gastot_hd, disenio = dc_epf)
+insumos_media_nacional <-  create_mean(gastot_hd, disenio = dc_epf)
 
 ```
 Nótese que en el caso de las funciones `crear_insumos_prop` y `crear_insumos_tot`, seguimos usando el argumento subpop. Esto no es necesario para que la función corra, pero dado que se quiere estimar el desempleo, se debe considerar la subpoblación de referencia.    
@@ -126,11 +127,11 @@ Nótese que en el caso de las funciones `crear_insumos_prop` y `crear_insumos_to
 Una vez que se han generado los insumos, podemos hacer la evaluación. Nuevamente, usamos funciones diferentes para cada uno de los tipos de estimación. 
 
 ```{r, eval=T, warning=FALSE}
-evaluacion_prop <- evaluar_calidad_prop(insumos_prop)
-evaluacion_tot <- evaluar_calidad_tot(insumos_total)
+evaluacion_prop <- evaluate_ratio(insumos_prop)
+evaluacion_tot <- evaluate_tot(insumos_total)
 
-evaluacion_suma <- evaluar_calidad_tot_con(insumos_suma)
-evaluacion_media <- evaluar_calidad_media(insumos_media)
+evaluacion_suma <- evaluate_tot_con(insumos_suma)
+evaluacion_media <- evaluate_mean(insumos_media)
 
 
 ```
@@ -142,10 +143,10 @@ Las mismas funciones para evaluar tienen un parámetro que nos permite saber si 
 
 ```{r}
 # Desempleo desagregado por region
-desagregar <- crear_insumos_tot(var = desocupado, dominios = region, subpop = fdt, disenio =  dc_ene)
+desagregar <- create_tot(var = desocupado, dominios = region, subpop = fdt, disenio =  dc_ene)
 
 # Evaluar tabulado
-evaluacion_tot_desagreg <- evaluar_calidad_tot(desagregar, publicar = T)
+evaluacion_tot_desagreg <- evaluate_tot(desagregar, publicar = T)
 
 
 ```
